--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Laporan Bencana</title>
     <link rel="icon" href="favicon.ico?v=2" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.7.1.min.js"
       integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
